@@ -383,6 +383,10 @@ Version 1.5.1 -- CVS
   - Added Bluesome theme by Saku Lehtiö (#1188209).
   - Rewrite of advanced identity handlying to remove stupid extraction
     of all post variables. [CAN-2005-2095]
+  - Added StartTLS support to address book LDAP backend (#1197703). Patch
+    by John Lane.
+  - Added subtree/one level search options to address book LDAP backend 
+    (#1212618).
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
